# cringed

./: .gitignore  Cargo.toml  README.md
legacy/: mockstarter.sh  readme.md
src/cringed-cli/: main.rs
src/cringed-daemon/: main.rs  serial.rs
src/cringedge/: cringeTypes.rs  main.bak  main.rs  serial.rs
src/server/: handlers.rs  main.rs  mock_client.html
utils/: 99-cringedge.rules  cringed.service  cringedge@.service  cringedge_standalone.service  populate_symlinks.sh  set-name.sh
utils/socketio-stash/: handlers.rs
