[package]
name = "cringed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cringedge-handler"
path = "src/cringedge/main.rs"

[dependencies]

engineioxide = { version = "0.3.0"}
socketioxide = {  }
axum = { version = "0.6.10" }
warp = { version = "0.3.1" }
hyper = { version = "0.14.26" }
tokio = { version = "1.13.0", features = ["full"] }
tokio_schedule = { version = "0.3.1" }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
serde = "1.0.159"
serde_json = "1.0.95"
futures = "0.3.27"
